<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_back"
    android:orientation="vertical">

    <View
        android:id="@+id/top_closer"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/back_top_closer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/create_board"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="@string/create"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_boardpin_1"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:background="@color/light_grey"
                            android:scaleType="centerCrop" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:background="@color/light_grey"
                            android:scaleType="centerCrop" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/name_your_board"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_create_board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/add_a_title_such_as_diy_or_recipes"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>