<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/tv_messages_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="130dp"
        android:text="@string/share_ideas_with_your_friends"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_messages_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_messages_title"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#373737"
        app:cardCornerRadius="30dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_search_white" />

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/iv_search"
                android:text="@string/search_by_name_or_email_address"
                android:textColor="#717171"
                android:textSize="16sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv_messages_search" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@id/rv_messages"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corner_shape"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_fileName="anim_loading_black.json"
        app:lottie_loop="true"
        app:lottie_speed="1.3" />

    <RelativeLayout
        android:id="@+id/sync_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_messages"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_messages_profile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:background="@color/main_color"
            android:scaleType="center"
            android:src="@drawable/ic_group"
            app:shapeAppearanceOverlay="@style/ImageView.Circle" />

        <TextView
            android:id="@+id/tv_sync_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_messages_profile"
            android:maxLines="1"
            android:text="@string/sync_contacts"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

    </RelativeLayout>
</RelativeLayout>